--- a/assets/package.json
+++ b/assets/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "phoenix": "file:../deps/phoenix",
+    "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
     "topbar": "^1.0"
   }
 }
