--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,8 @@ updates:
       timezone: Europe/London
   - package-ecosystem: npm
     directory: "/assets"
+    ignore:
+      - dependency-name: "phoenix*"
     schedule:
       interval: daily
       time: "07:00"
