--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,9 +9,9 @@ updates:
   - package-ecosystem: npm
     directory: "/assets"
     ignore:
-      - dependency-name: "phoenix"
-      - dependency-name: "phoenix_html"
-      - dependency-name: "phoenix_live_view"
+      - dependency-name: "file:../deps/phoenix"
+      - dependency-name: "file:../deps/phoenix_html"
+      - dependency-name: "file:../deps/phoenix_live_view"
     schedule:
       interval: daily
       time: "07:00"
